--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ appdirs==1.4.3
 Django==1.10.5
 django-bootstrap-form==3.2.1
 gunicorn==19.7.1
-mysql-python==1.2.5
+#mysql-python==1.2.5
 packaging==16.8
 Pillow==3.4.2
 pyparsing==2.1.10
