--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 appdirs==1.4.3
+dj-database-url==0.4.2
 Django==1.10.5
 django-bootstrap-form==3.2.1
 gunicorn==19.7.1
 packaging==16.8
 Pillow==3.4.2
+psycopg2==2.7.3.2
 pyparsing==2.1.10
 pytz==2017.2
 six==1.10.0
