--- a/requirements.txt
+++ b/requirements.txt
@@ -3,15 +3,25 @@ APScheduler==3.5.1
 dj-database-url==0.4.2
 Django==1.10.5
 django-bootstrap-form==3.2.1
+django-easy-pdf==0.1.1
+Faker==0.8.13
 funcsigs==1.0.2
 futures==3.2.0
 gunicorn==19.7.1
-MySQL-python==1.2.5
+html5lib==1.0.1
+httplib2==0.11.3
+ipaddress==1.0.22
 packaging==16.8
 Pillow==3.4.2
 psycopg2==2.7.3.2
 pyparsing==2.1.10
+PyPDF2==1.26.0
+python-dateutil==2.7.2
 pytz==2017.2
+reportlab==3.4.0
 six==1.10.0
+text-unidecode==1.2
 tzlocal==1.5.1
+webencodings==0.5.1
 whitenoise==3.3.1
+xhtml2pdf==0.2.2
