--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ dj-database-url==0.4.2
 Django==1.10.5
 django-bootstrap-form==3.2.1
 django-easy-pdf==0.1.1
+et-xmlfile==1.0.1
 Faker==0.8.13
 funcsigs==1.0.2
 futures==3.2.0
@@ -11,6 +12,8 @@ gunicorn==19.7.1
 html5lib==1.0.1
 httplib2==0.11.3
 ipaddress==1.0.22
+jdcal==1.4
+openpyxl==2.5.3
 packaging==16.8
 Pillow==3.4.2
 psycopg2==2.7.3.2
